package com.denniseckerskorn.ejercicio07;

public abstract class Figura {
    public abstract void calculateArea();
}
